fixes + support for basic device setup
